/*
 * $Id: ChangeLog,v 1.6306 2008/12/10 00:47:31 likewolf Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2008-12-10 10:47 UTC+0100 Patrick Mast <patrick.mast@xharbour.com>
  * compile.mak
    + hbntos

2008-12-10 03:40 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * common.mak
  * include/hbextern.ch
  * source/rtl/Makefile
  + source/rtl/hbntos.c
    + Added function HB_NToS( <number> ) -> <string>.
      This is equivalent to LTrim( Str( <number> ) ), just faster.
  * include/hbapi.h
  * source/vm/extend.c
    + Added hb_retc_null() which is equivalent to hb_retc( NULL ) and will
      return an empty string. I opted for this because hb_retc( NULL ) usage is
      not compatible with CA-Cl*pper _retc(), so it might create problems when
      writing C code intended for both Clipper and Harbour.
  * include/hbgfx.ch
  * include/hbgfxdef.ch
     * GFX_* constants renamed to HB_GFX_*. The old ones are
       still working but it's recommended to update to use HB_GFX_*.
  (borrowed from Harbour, by Viktor Szakats)

  * source/rtl/gtcrs/gtcrs.c
  * source/rtl/gttrm/gttrm.c
  * source/rtl/gtsln/gtsln.c
    ! fixed reentrance counter resetting
    * misc cosmetic changes
  * source/rtl/gttrm/gttrm.c
    * use CP437 for BOX characters when terminal is in UTF-8 mode
    ! set default color before raw scrolling in console emulation
      mode
    ! fixed redrawing GPM mouse pointer after screen updating
  * source/rtl/gtxwc/gtxwc.c
  * source/rtl/gtxwc/gtxwc.h
    ! use XInitThreads() for MT safe thread access when linked with MT HVM
    + added optional mutex protection enabled by HB_XWC_XLIB_NEEDLOCKS macro
      to use when XLib does not support XInitThreads()
    * added hack for problems with some XLIB versions in heavy stress
      MT tests
  * source/rtl/gtcrs/gtcrs.h