@@ -1,5 +1,5 @@
 /*
- * $Id: gtwvg.c,v 1.5 2008/11/19 05:24:51 andijahja Exp $
+ * $Id: gtwvg.c,v 1.6 2008/11/29 12:03:08 enricomaria Exp $
  */
 
 /*
@@ -2787,16 +2787,16 @@ static int hb_gt_wvt_gfx_Primitive( PHB_GT pGT, int iType, int iTop, int iLeft, 
    {
       switch( iType )
       {
-         case GFX_ACQUIRESCREEN:
-         case GFX_RELEASESCREEN:
+         case HB_GFX_ACQUIRESCREEN:
+         case HB_GFX_RELEASESCREEN:
             iRet = 1;
             break;
 
-         case GFX_MAKECOLOR:
+         case HB_GFX_MAKECOLOR:
             iRet = (iTop << 16) | (iLeft << 8) | ( iBottom );
             break;
 
-         case GFX_PUTPIXEL:
+         case HB_GFX_PUTPIXEL:
             SetGFXContext( iBottom );
 
             MoveToEx( hdc, iLeft, iTop, NULL );
@@ -2806,7 +2806,7 @@ static int hb_gt_wvt_gfx_Primitive( PHB_GT pGT, int iType, int iTop, int iLeft, 
             iRet = 1;
             break;
 
-         case GFX_LINE:
+         case HB_GFX_LINE:
             SetGFXContext( iColor );
 
             MoveToEx( hdc, iLeft, iTop, NULL );
@@ -2816,7 +2816,7 @@ static int hb_gt_wvt_gfx_Primitive( PHB_GT pGT, int iType, int iTop, int iLeft, 
             iRet = 1;
             break;
 
-         case GFX_RECT:
+         case HB_GFX_RECT:
          {
             RECT r;
 
@@ -2833,7 +2833,7 @@ static int hb_gt_wvt_gfx_Primitive( PHB_GT pGT, int iType, int iTop, int iLeft, 
             iRet = 1;
             break;
          }
-         case GFX_FILLEDRECT:
+         case HB_GFX_FILLEDRECT:
             SetGFXContext( iColor );
 
             Rectangle( hdc, iLeft, iTop, iRight, iBottom );
@@ -2842,7 +2842,7 @@ static int hb_gt_wvt_gfx_Primitive( PHB_GT pGT, int iType, int iTop, int iLeft, 
             iRet = 1;
             break;
 
-         case GFX_CIRCLE:
+         case HB_GFX_CIRCLE:
             SetGFXContext( iRight );
 
             Arc( hdc, iLeft - iBottom / 2, iTop - iBottom / 2, iLeft + iBottom / 2, iTop + iBottom / 2, 0, 0, 0, 0 );
@@ -2851,7 +2851,7 @@ static int hb_gt_wvt_gfx_Primitive( PHB_GT pGT, int iType, int iTop, int iLeft, 
             iRet = 1;
             break;
 
-         case GFX_FILLEDCIRCLE:
+         case HB_GFX_FILLEDCIRCLE:
             SetGFXContext( iRight );
 
             Ellipse( hdc, iLeft - iBottom / 2, iTop - iBottom / 2, iLeft + iBottom / 2, iTop + iBottom / 2 );
@@ -2860,7 +2860,7 @@ static int hb_gt_wvt_gfx_Primitive( PHB_GT pGT, int iType, int iTop, int iLeft, 
             iRet = 1;
             break;
 
-         case GFX_ELLIPSE:
+         case HB_GFX_ELLIPSE:
             SetGFXContext( iColor );
 
             Arc( hdc, iLeft - iRight / 2, iTop - iBottom / 2, iLeft + iRight / 2, iTop + iBottom / 2, 0, 0, 0, 0 );
@@ -2869,7 +2869,7 @@ static int hb_gt_wvt_gfx_Primitive( PHB_GT pGT, int iType, int iTop, int iLeft, 
             iRet = 1;
             break;
 
-         case GFX_FILLEDELLIPSE:
+         case HB_GFX_FILLEDELLIPSE:
             SetGFXContext( iColor );
 
             Ellipse( hdc, iLeft - iRight / 2, iTop - iBottom / 2, iLeft + iRight / 2, iTop + iBottom / 2 );
@@ -2878,7 +2878,7 @@ static int hb_gt_wvt_gfx_Primitive( PHB_GT pGT, int iType, int iTop, int iLeft, 
             iRet = 1;
             break;
 
-         case GFX_FLOODFILL:
+         case HB_GFX_FLOODFILL:
             SetGFXContext( iBottom );
 
             FloodFill( hdc, iLeft, iTop, iColor );
